fix: fix dropdown z-index when open

--- a/assets/main.css
+++ b/assets/main.css
@@ -9,7 +9,7 @@
     top: 0;
     background-color: var(--pico-background-color);
     border-bottom: 1px solid var(--pico-muted-border-color);
-    z-index: 2;
+    z-index: 100;
 }
 
 .main {
